toward usage of CarrierJob